plugins {
    id 'java'
    id 'org.jetbrains.intellij' version '1.5.1'
}

group 'org.easysoc'
version pluginVersion

sourceCompatibility = 11
targetCompatibility = 11

repositories {
    // sbt publishM2 for firrtl and treadle at https://github.com/easysoc
    mavenLocal()
    mavenCentral()
//    maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
}

dependencies {
    implementation 'org.antlr:antlr4-runtime:4.9.3'
    implementation 'org.antlr:antlr4-intellij-adaptor:0.1'

    implementation ('edu.berkeley.cs:treadle_2.13:1.6-SNAPSHOT') {
//        exclude module: 'scala-jline'
//        exclude module: 'protobuf-java'
    }
}

// See https://github.com/JetBrains/gradle-intellij-plugin/
intellij {
    // version and localPath should not be specified at the same time
    // version = '2021.3.3'
    localPath = "/home/itviewer/Downloads/software/idea-IC"
    sandboxDir = "/home/itviewer/IdeaProjects/plugins-sandbox"
    plugins = ['org.jetbrains.plugins.terminal' /**,'PsiViewer:213-SNAPSHOT' */]
    // downloadSources = false
}

runIde {
    ideDir = project.file('/home/itviewer/Downloads/software/idea-IC')
    //for jbr11
    jvmArgs '--add-exports=java.base/jdk.internal.vm=ALL-UNNAMED','-Djdk.module.illegalAccess.silent=true'
}

// https://www.jetbrains.com/idea/download/other.html
patchPluginXml {
    sinceBuild = '213'
    untilBuild = '221.*'
}

prepareSandbox {
    from('src/main/webapp') {
        into "${intellij.pluginName.get()}/webapp/"
    }
}

buildSearchableOptions.onlyIf { false }
jarSearchableOptions.onlyIf { false }

//prepareSandbox.onlyIf { false }
